# tcpcon

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
pynetcat/: __main__.py  args.py  keyboard.py  netcat.py  network.py
tcpcon/: args.py  keyboard.py  netcat.py  network.py  tcp.py  terminate.py
