[metadata]
name = pynetcat
description = Create the skeleton for a python package/project
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/pynetcat
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    pynetcat = pynetcat.__main__:main
