[metadata]
name = tcpcon
description = Command line utility to test tcp connections
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/tcpcon
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    tcpcon = tcpcon.__main__:main
